# course-applied-machine-learning-ensemble-learning

./: NOTICE  README.md  applied-machine-learning-ensemble-learning.code-workspace  ensembles.ipynb  environment.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
config/: config.yaml
data/: adult.parquet  simple.csv
models/: GradientBoosting_best_model.pkl  XGBoost_best_model.pkl
notebooks/: analyse_optuna_results.ipynb  hyperparameter_analysis.ipynb  model_selection.ipynb  overfit_analysis.ipynb
results/: config.yaml
results/v1_initial_run/: GradientBoosting_study.pkl  RandomForest_study.pkl  XGBoost_study.pkl  config.yaml  optuna_results.csv  selected_models.csv
results/v2_run/: GradientBoosting_study.pkl  XGBoost_study.pkl  config.yaml  optuna_results.csv  selected_models.csv
src/EnsembleLearning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/data/: load_dataset.py
src/ml_ensemble_course.egg-info/: PKG-INFO  SOURCES.txt
src/models/: train_model_dev.py  train_model_dev_multi.py  train_model_dev_optuna.py  train_model_prod.py
src/models/utils/: common.py  optuna_utils.py
src/visualization/: optuna_results.py
