[project]
name = "EnsembleLearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "drawdata>=0.3.6",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    'pandas',
    "pyarrow>=18.1.0",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.3",
]
